<resources>
    <string name="app_name">Atelier Vendor</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="forgetPassword">Forget Password ?</string>
    <string name="login">Login</string>
    <string name="totalBalance">Total Balance</string>
    <string name="currency">KWD</string>
    <string name="fromDate">From Date</string>
    <string name="toDate">To Date</string>
    <string name="changeStatus">Change Order Status</string>
    <string name="pending">pending</string>
    <string name="Processing">Processing</string>
    <string name="ready">Ready for delivery</string>
    <string name="shipped">Shipped</string>
    <string name="filter">Filter</string>
    <string name="sizeInCm">Size In cm</string>
    <string name="cm">cm</string>
    <string name="color">Color</string>
    <string name="notes">Notes</string>
    <string name="size">Size</string>
    <string name="atelier">Atelier</string>
    <string name="checkInternet">Check Your Internet Connection First</string>
    <string name="mail_address">Email Address</string>
    <string name="send">Send</string>
    <string name="checkYourEmail">Message Sent For You, Check Your Email</string>
    <string name="generalError">an Error Occurred , Please Try later</string>
    <string name="orderName">Order Number:</string>
    <string name="delivered">Delivered</string>
    <string name="noOrders">No Orders For Showing Now</string>
    <string name="confirm">Confirm</string>
    <string name="pieces">Piece</string>
    <string name="lang">عربي</string>
    <string name="enterUserNameOrEmail">Enter Your Email Or User Name</string>
    <string name="enterPassword">Enter Your Password</string>
    <string name="enterEmail">Enter Your Email Address</string>
    <string name="nameOrPasswordIncorrect">User Name or Password Incorrect</string>
    <string name="selectStartDate">Select Start Date Filtering</string>
    <string name="selectEndDate">Select End Date Filtering</string>
    <string name="searchByOrderNum">Search By Order Number</string>
    <string name="orderStatus">Order Status</string>
    <string name="orderDate">Order Date</string>
    <string name="orderTotal">Total</string>
    <string name="logout">Logout</string>
    <string name="all">All</string>
    <string name="PDFInvoice">PDF Invoice</string>
    <string name="canNotSelect">Sorry Can\'t Select This Status</string>
</resources>
