<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/fragment_login_cl_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/fragment_login_tv_changeLang"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_marginTop="28dp"
            android:text="@string/lang"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        
        <ImageView
            android:id="@+id/imageView19"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="73dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@mipmap/logo" />

        <EditText
            android:id="@+id/fragment_login_et_userName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="42dp"
            android:layout_marginEnd="40dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/user_name"
            android:textSize="12sp"
            android:textColor="@color/black"
            android:fontFamily="@font/droid_arabic_kufi"
            android:textColorHint="@color/gray"
            android:paddingBottom="12dp"
            android:paddingTop="12dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:background="@drawable/input_box"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView19" />

        <EditText
            android:id="@+id/fragment_login_et_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:inputType="textPassword"
            android:textAlignment="viewStart"
            android:hint="@string/password"
            android:textSize="12sp"
            android:textColor="@color/black"
            android:fontFamily="@font/droid_arabic_kufi"
            android:textColorHint="@color/gray"
            android:paddingBottom="12dp"
            android:paddingTop="12dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:background="@drawable/input_box"
            app:layout_constraintEnd_toEndOf="@+id/fragment_login_et_userName"
            app:layout_constraintStart_toStartOf="@+id/fragment_login_et_userName"
            app:layout_constraintTop_toBottomOf="@+id/fragment_login_et_userName"
          />

        <TextView
            android:id="@+id/fragment_login_tv_forgetPass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="22dp"
            android:text="@string/forgetPassword"
            android:textColor="@color/colorPrimary"
            android:textSize="13sp"
            android:fontFamily="@font/droid_arabic_kufi"
            app:layout_constraintEnd_toEndOf="@+id/fragment_login_et_password"
            app:layout_constraintStart_toStartOf="@+id/fragment_login_et_password"
            app:layout_constraintTop_toBottomOf="@+id/fragment_login_et_password"
            />

        <Button
            android:id="@+id/fragment_login_btn_login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="42dp"
            android:layout_marginEnd="40dp"
            android:text="@string/login"
            android:background="@color/colorPrimary"
            android:textAllCaps="false"
            android:textSize="15sp"
            android:textColor="@color/white"
            android:fontFamily="@font/droid_arabic_kufi"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fragment_login_tv_forgetPass"
           />



        <ProgressBar
            android:id="@+id/loading"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:indeterminateTint="@color/colorPrimary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>
