<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@color/lightGray2">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/fragment_orders_cl_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:scaleType="fitXY"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@mipmap/box_total_balance" />

            <TextView
                android:id="@+id/textView"
                style="@style/TextAppearance.AppCompat.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:fontFamily="@font/droid_arabic_kufi"
                android:text="@string/totalBalance"
                android:textColor="@color/darkGray"
                app:layout_constraintBottom_toBottomOf="@+id/imageView"
                app:layout_constraintStart_toStartOf="@+id/imageView"
                app:layout_constraintTop_toTopOf="@+id/imageView" />

            <TextView
                android:id="@+id/fragment_orders_tv_total"
                style="@style/TextAppearance.AppCompat.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:text="00.000 KD"
                android:textColor="@color/colorPrimary"
                app:layout_constraintBottom_toBottomOf="@+id/imageView"
                app:layout_constraintEnd_toEndOf="@+id/imageView"
                app:layout_constraintTop_toTopOf="@+id/imageView" />


            <LinearLayout
                android:id="@+id/imageView2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="@+id/imageView"
                app:layout_constraintStart_toStartOf="@+id/imageView"
                app:layout_constraintTop_toBottomOf="@+id/imageView">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/droid_arabic_kufi"
                        android:text="@string/fromDate"
                        android:textColor="@color/darkGray"
                        app:layout_constraintStart_toStartOf="@+id/imageView2"
                        app:layout_constraintTop_toBottomOf="@+id/imageView" />

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/imageView40"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@mipmap/box_calendar"
                        android:paddingTop="10dp"
                        android:paddingEnd="10dp"
                        android:paddingBottom="10dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView3">

                        <ImageView
                            android:id="@+id/imageView6"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="12dp"
                            app:layout_constraintBottom_toBottomOf="@+id/imageView40"
                            app:layout_constraintStart_toStartOf="@+id/imageView40"
                            app:layout_constraintTop_toTopOf="@+id/imageView40"
                            app:srcCompat="@mipmap/ic_calendar" />

                        <TextView
                            android:id="@+id/fragment_orders_tv_fromDate"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:layout_marginEnd="20dp"
                            android:text="yyyy-mm-dd"
                            android:textColor="@color/darkGray"
                            app:layout_constraintBottom_toBottomOf="@+id/imageView6"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toEndOf="@+id/imageView6"
                            app:layout_constraintTop_toTopOf="@+id/imageView6" />

                    </androidx.constraintlayout.widget.ConstraintLayout>


                </LinearLayout>


                <LinearLayout
                    android:id="@+id/linearLayout2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toBottomOf="@+id/imageView2"
                    app:layout_constraintStart_toEndOf="@+id/imageView2"
                    app:layout_constraintTop_toTopOf="@+id/imageView2">

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/droid_arabic_kufi"
                        android:text="@string/toDate"
                        android:textColor="@color/darkGray"
                        app:layout_constraintBottom_toTopOf="@+id/imageView4"
                        app:layout_constraintStart_toStartOf="@+id/imageView4" />


                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/imageView20"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@mipmap/box_calendar"
                        android:paddingTop="10dp"
                        android:paddingEnd="10dp"
                        android:paddingBottom="10dp"
                        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/imageView2"
                        app:layout_constraintTop_toTopOf="@+id/imageView2">

                        <ImageView
                            android:id="@+id/imageView5"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="12dp"
                            app:layout_constraintBottom_toBottomOf="@+id/imageView20"
                            app:layout_constraintStart_toStartOf="@+id/imageView20"
                            app:layout_constraintTop_toTopOf="@+id/imageView20"
                            app:srcCompat="@mipmap/ic_calendar" />

                        <TextView
                            android:id="@+id/fragment_orders_tv_toDate"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:layout_marginEnd="20dp"
                            android:text="yyyy-mm-dd"
                            android:textColor="@color/darkGray"
                            app:layout_constraintBottom_toBottomOf="@+id/imageView5"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toEndOf="@+id/imageView5"
                            app:layout_constraintTop_toTopOf="@+id/imageView5" />


                    </androidx.constraintlayout.widget.ConstraintLayout>

                </LinearLayout>

                <ImageView
                    android:id="@+id/fragment_orders_iv_dateFilter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|end"
                    android:padding="8dp"
                    app:layout_constraintBottom_toBottomOf="@+id/linearLayout2"
                    app:layout_constraintStart_toEndOf="@+id/linearLayout2"
                    app:srcCompat="@mipmap/ic_filter" />
            </LinearLayout>


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/fragment_orders_rv_orders"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:nestedScrollingEnabled="false"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/imageView2"
                app:layout_constraintStart_toStartOf="@+id/imageView2"
                app:layout_constraintTop_toBottomOf="@+id/imageView2"
                tools:listitem="@layout/item_order" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    <ProgressBar
        android:id="@+id/loading"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:layout_marginBottom="8dp"
        android:indeterminateTint="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>
